# Gen-ai-2

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: results.json
docs/: ARCHITECTURE.md  BENCHMARK.md
infra/: IAM.md  deploy.sh  deploy_cloudrun.sh  load_bigquery.py
notebooks/: benchmark_colab.ipynb
pipeline/: __init__.py  accelerate.py  benchmark.py  engine.py  features.py  generate_data.py  risk.py  train.py
server/: __init__.py  ai.py  bigquery_repo.py  config.py  domain.py  main.py  repository.py  schemas.py
tests/: __init__.py  test_accelerate.py  test_ai.py  test_api.py  test_benchmark.py  test_domain.py  test_engine.py  test_features.py  test_generate.py  test_repository.py  test_risk.py  test_train.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
web/src/: App.test.tsx  App.tsx  api.ts  index.css  testUtils.tsx  theme.ts  types.ts
web/src/components/: AIAssistant.tsx  Alerts.tsx  AskBox.test.tsx  AskBox.tsx  BandDonut.tsx  ChartTooltip.test.tsx  ChartTooltip.tsx  Dashboard.tsx  DataTable.test.tsx  DataTable.tsx  ForecastBars.tsx  ForecastChart.tsx  LoadGauge.tsx  RiskBadge.tsx  RiskRanking.test.tsx  RiskRanking.tsx  Splash.tsx  StatCards.tsx  StatusOverview.tsx
web/src/hooks/: motion.ts
web/src/lib/: kpis.test.ts  kpis.ts  mockMetrics.ts
