[project]
name = "gridpulse"
version = "0.1.0"
description = "Accelerated energy demand & peak-risk decision intelligence (Google Cloud + NVIDIA RAPIDS)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GridPulse contributors" }]
keywords = [
    "energy",
    "demand-forecasting",
    "rapids",
    "cudf",
    "bigquery",
    "vertex-ai",
    "decision-intelligence",
]
dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "xgboost>=2.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
cloud = [
    "google-cloud-bigquery>=3.25",
    "db-dtypes>=1.3",
    "google-genai>=0.8",
]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pandas-stubs>=2.2",
    "httpx>=0.27",
    "httpx2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "server"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["."]
extend-exclude = ["notebooks"]  # demo notebooks are not held to production lint rules

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PTH", "RUF", "ARG", "TID", "D"]
# D203/D213 conflict with D211/D212 (google convention picks the latter); D104/D107
# silence package- and __init__-docstring noise.
ignore = ["D104", "D107", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ARG"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
# FastAPI intentionally uses callables (Depends/Query) in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
# pandas operations frequently return Any even with stubs; keep the rest of strict.
module = ["pipeline.*", "server.domain", "server.repository", "server.bigquery_repo"]
warn_return_any = false

[[tool.mypy.overrides]]
# Optional/GPU-only deps without type stubs in the dev environment.
module = ["cudf", "cudf.pandas", "xgboost", "google", "google.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=pipeline --cov=server --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["pipeline", "server"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
